# Intelligent-MultiHop-Routing

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: chaos_router.py  dynamic_network.py  explainer.py  failure_demo.py  main.py  metrics.py  network_collector.py  network_health.py  report.py  telemetry.py  trigger.py  ws_server.py
frontend/: app.py  live_telemetry.py  visualizer.py
rl_engine/: environment.py  inference.py  q_learning.py  rewards.py  topology.py  train.py
tests/: test_metrics.py  test_qlearning.py  test_topology.py
