[project]
name = "intelligent-multihop-routing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pytest>=9.1.1",
    "streamlit>=1.58.0",
    "streamlit-autorefresh>=1.0.1",
    "uvicorn>=0.49.0",
    "websocket-client>=1.9.0",
    "websockets>=16.0",
]
